// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link inner animated link renders without regressions 1`] = `
<a
  className="Link__StyledLink-sc-ualt9-0 hjXVxL"
  href="/inner-link"
>
  Title
</a>
`;

exports[`Link inner plain link renders without regressions 1`] = `
<a
  className="Link__StyledLink-sc-ualt9-0 gpCrQD"
  href="/inner-link"
  usePlainStyle={true}
>
  Title
</a>
`;

exports[`Link outer link renders without regressions 1`] = `
<a
  className="Link__StyledAnchor-sc-ualt9-1 eQkEtD"
  href="https://outer.link.to"
  rel="noopener noreferrer"
  target="_blank"
>
  Title
</a>
`;
